# YouGrab

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  ruff.toml
api/: admin.py  consts.py  models.py  urls.py
api/migrations/: 0001_initial.py
project/: settings.py  urls.py
project/settings/: rest_framework.py  settings.py
